@@ -13,7 +13,7 @@ import edu.colorado.phet.linegraphing.common.model.Line;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-class ChallengeFactory6 extends ChallengeFactory {
+public class ChallengeFactory6 extends ChallengeFactory {
 
     /**
      * Creates challenges for this game level.
